# IA-HAM10000

./: Makefile  README.md  ham_cnn.ipynb  pyproject.toml
